# datafusion-llm-function

./: Cargo.toml  README.md
examples/: llm_bool.rs
src/: lib.rs  main.rs
src/llm/: async_func.rs  exec.rs  functions.rs  logical.rs  mod.rs  physical_optimizer.rs  physical_planner.rs  plan.rs
src/llm/functions/: async_upper.rs  config.rs  llm_bool.rs  mod.rs
