[package]
name = "datafusion-llm-function"
version = "0.1.0"
edition = "2021"

[lib]
name = "datafusion_llm_function"
path = "src/lib.rs"

[dependencies]
datafusion = { version = "45.0.0" }
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
async-trait = "0.1.85"
serde = { version = "1.0.217", features = ["derive"] }
futures = { version = "0.3.31" }
log = "0.4.22"
env_logger = "0.11.6"
reqwest = { version = "0.12.12", features = ["json"] }
comfy-table = "7.1.3"
serde_json = "1.0.135"
